--- a/workspace/files/ui/templates/files/ui/partials/file_viewer_modal.html
+++ b/workspace/files/ui/templates/files/ui/partials/file_viewer_modal.html
@@ -1,5 +1,5 @@
 <!-- File Viewer Modal -->
-<div x-data="fileViewerModal()" x-init="init()">
+<div x-data="fileViewerModal()">
   <dialog
     x-ref="dialog"
     class="modal"
