--- a/workspace/files/ui/templates/files/ui/viewers/image_viewer.html
+++ b/workspace/files/ui/templates/files/ui/viewers/image_viewer.html
@@ -1,5 +1,5 @@
 <!-- Image Viewer -->
-<div class="flex flex-col h-full" x-data="imageViewerData()" x-init="init()">
+<div class="flex flex-col h-full" x-data="imageViewerData()">
   <!-- Toolbar -->
   <div class="flex items-center justify-center gap-2 p-4 bg-base-100 border-b border-base-300">
     <button type="button" class="btn btn-sm btn-ghost" @click="zoom(-0.2)" title="Zoom out (-)">
